# template-microservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-dev.sh
alembic/: env.py
alembic/versions/: 83d2f9ede2b9_initial_schema_users_and_auth.py
src/: config.py  consume_worker.py  container.py  main.py
src/api/routes/: auth_route.py  test_route.py
src/api/schemas/: auth_schemas.py  test_schemas.py
src/api/utils/: dependencies.py
src/repositories/: redis_repository.py
src/repositories/db/: base.py
src/repositories/db/models/: refresh_token.py  user.py
src/repositories/db_repositories/: db_refresh_token_repository.py  db_repository.py  db_user_repository.py
src/repositories/rabbit_repositories/: rabbit_out_in_repository.py  rabbit_repository.py
src/usecases/: auth_usecase.py  consumer_usecase.py  errors.py  producer_usecase.py
src/usecases/interfaces/: cache_interface.py
src/usecases/interfaces/db_interfaces/: db_refresh_token_interface.py  db_user_interface.py
src/usecases/interfaces/rabbit_interfaces/: rabbit_out_in_interface.py
src/usecases/schemas/: auth_schemas.py  cache_interface.py  user_schemas.py
src/utils/: security.py
